<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_hibiscus_key"
        android:title="@string/pref_hibiscus_title">

        <EditTextPreference
            android:key="@string/pref_hibiscus_server_key"
            android:title="@string/pref_hibiscus_server"
            android:summary="@string/pref_hibiscus_server_summary"
            android:defaultValue="@string/pref_hibiscus_server_default" />

        <EditTextPreference
            android:key="@string/pref_hibiscus_port_key"
            android:title="@string/pref_hibiscus_port"
            android:summary="@string/pref_hibiscus_port_summary"
            android:defaultValue="@string/pref_hibiscus_port_default"
            android:inputType="number"/>

        <EditTextPreference
            android:key="@string/pref_hibiscus_username_key"
            android:title="@string/pref_hibiscus_username"
            android:summary="@string/pref_hibiscus_username_summary"
            android:defaultValue="@string/pref_hibiscus_username_default" />

        <EditTextPreference
            android:key="@string/pref_hibiscus_password_key"
            android:title="@string/pref_hibiscus_password"
            android:summary="@string/pref_hibiscus_password_summary"
            android:inputType="textPassword" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_sync_key"
        android:title="@string/pref_sync_title">

        <CheckBoxPreference
            android:key="@string/pref_sync_active_key"
            android:title="@string/pref_sync_active_title"
            android:summaryOn="@string/pref_sync_active_summary_on"
            android:summaryOff="@string/pref_sync_active_summary_off"
            android:defaultValue="@bool/pref_sync_active_default" />

        <ListPreference
            android:dependency="@string/pref_sync_active_key"
            android:key="@string/pref_sync_interval_key"
            android:title="@string/pref_sync_interval_title"
            android:entries="@array/pref_sync_interval_entries"
            android:entryValues="@array/pref_sync_interval_values"
            android:defaultValue="@string/pref_sync_interval_default" />
    </PreferenceCategory>
</PreferenceScreen>