<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/box_padding"
    android:background="@color/box_background_color">

    <!-- account name -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/transaction_details_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/transaction_details_header_size"
            android:text="Onlineüberweisung"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/transaction_details_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="01.01.2015"
            android:textSize="@dimen/transaction_details_date_size" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_divider_height"
        android:background="@color/divider_color"
        android:layout_marginBottom="@dimen/box_padding_bottom" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="2">

        <!-- transaction value -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/label_margin"
            android:layout_marginBottom="@dimen/label_margin"
            android:text="@string/transaction_details_value" />

        <TextView
            android:id="@+id/transaction_details_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/label_margin"
            android:textStyle="bold"
            android:text="... Betrag ..."
            android:textColor="@color/balance_positive" />

        <!-- transaction recipient/sender name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/label_margin"
            android:layout_marginBottom="@dimen/label_margin"
            android:text="@string/transaction_details_name" />

        <TextView
            android:id="@+id/transaction_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/label_margin"
            android:textStyle="bold"
            android:text="... Empfängername..." />

        <!-- transaction recipient/sender account number -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/label_margin"
            android:layout_marginBottom="@dimen/label_margin"
            android:text="@string/transaction_details_account_number" />

        <TextView
            android:id="@+id/transaction_details_account_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/label_margin"
            android:textStyle="bold"
            android:text="... Kontonummer ..." />

        <!-- transaction recipient/sender bank identifier -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/label_margin"
            android:layout_marginBottom="@dimen/label_margin"
            android:text="@string/transaction_details_bank_identifier" />

        <TextView
            android:id="@+id/transaction_details_bank_identifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/label_margin"
            android:textStyle="bold"
            android:text="... Bankleitzahl ..." />

        <!-- transaction reference -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/label_margin"
            android:text="@string/transaction_details_reference" />

        <TextView
            android:id="@+id/transaction_details_reference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/label_margin"
            android:textStyle="bold"
            android:text="... Verwendungszweck ..." />
    </GridLayout>

</LinearLayout>